Bug 136877 - Crash when erroneously configuring duplicate account
Summary: Crash when erroneously configuring duplicate account
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Jabber Plugin (other bugs)
Version First Reported In: 0.40.0
Platform: Mandriva RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 133351 136971 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-11-05 11:03 UTC by Frederik Himpe
Modified: 2007-11-17 14:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frederik Himpe 2006-11-05 11:03:42 UTC
Version:           0.12.3 (using KDE KDE 3.5.5)
Installed from:    Mandriva RPMs
Compiler:          gcc 4.1.1 
OS:                Linux

I configured a Jabber account in Kopete, but forgot that I already configured already. As soon as I clicked on the Finish button in the Add account wizard, Kopete crashed. I do not have a usable backtrace, as Mandriva Cooker RPMs are not compiled with debugging information, but I think this is easily reproducable. I reproduced it myself on a x86 and x86_64 machine, both running KDE 3.5.5 and Kopete 0.12.3, current Mandriva Cooker RPMs.
Comment 1 Matt Rogers 2006-11-05 15:14:52 UTC
did you configure it with the exact same details as another account?
Comment 2 Frederik Himpe 2006-11-05 15:58:09 UTC
Yes. There's not much to configure: Jabber ID, password (remembered) and I activated SSL, and all other information is left default.
Comment 3 Bram Schoenmakers 2006-11-07 09:50:45 UTC
*** Bug 136971 has been marked as a duplicate of this bug. ***
Comment 4 Pino Toscano 2007-04-18 13:32:23 UTC
*** Bug 133351 has been marked as a duplicate of this bug. ***
Comment 5 Matt Rogers 2007-09-12 05:02:44 UTC
Please provide a backtrace of the crash. There's not much else we can do. Please read http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports for more details. 
Comment 6 Will Stephenson 2007-11-14 15:51:55 UTC
To be fixed in KDE 4.0 by detecting duplicates.
Comment 7 Roman Jarosz 2007-11-17 14:29:28 UTC
SVN commit 737950 by rjarosz:

Close Add Account Wizard if a account wasn't created correctly.
This also fixes crash if we try to press finish button again.

BUG: 136877



 M  +1 -0      addaccountwizard.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=737950