Close Add Account Wizard if a account wasn't created correctly. This also fixes crash if we try to press finish button again.

BUG: 136877


svn path=/trunk/KDE/kdenetwork/kopete/; revision=737950